fixed bug; event listeners Colours

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </section>
         <section id="newdivs-section"></section>
 
-        <h1>Colour pt.2</h1>
+        <h1>Colours pt.2</h1>
         <section>
-            <div onclick="newColour()">touch me</div>
-            <div onclick="newColour()">touch me</div>
-            <div onclick="newColour()">touch me</div>
-            <div ondblclick="newColour()">pick me</div>
+            <div id="paint-me1">touch me</div>
+            <div id="paint-me2">touch me</div>
+            <div id="paint-me3">touch me</div>
+            <div id="paint-me4">pick me</div>
         </section>
     </main>
     <script src="main.js"></script>
